--- a/globalGameJam/pom.xml
+++ b/globalGameJam/pom.xml
@@ -6,9 +6,34 @@
 	<artifactId>globalGameJam</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+	<repositories>
+		<repository>
+			<id>be.0110.repo-releases</id>
+			<name>0110.be repository</name>
+			<url>https://mvn.0110.be/releases</url>
+		</repository>
+
+	</repositories>
 	<properties>
 		<maven.compiler.target>21</maven.compiler.target>
 		<maven.compiler.source>21</maven.compiler.source>
 	</properties>
+
+	<dependencies>
+
+
+		<dependency>
+			<groupId>be.tarsos.dsp</groupId>
+			<artifactId>core</artifactId>
+			<version>2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>be.tarsos.dsp</groupId>
+			<artifactId>jvm</artifactId>
+			<version>2.5</version>
+		</dependency>
+
+	</dependencies>
+
 
 </project>
