--- a/globalGameJam/pom.xml
+++ b/globalGameJam/pom.xml
@@ -12,16 +12,14 @@
 			<name>0110.be repository</name>
 			<url>https://mvn.0110.be/releases</url>
 		</repository>
-
 	</repositories>
+
 	<properties>
 		<maven.compiler.target>21</maven.compiler.target>
 		<maven.compiler.source>21</maven.compiler.source>
 	</properties>
 
 	<dependencies>
-
-
 		<dependency>
 			<groupId>be.tarsos.dsp</groupId>
 			<artifactId>core</artifactId>
@@ -32,8 +30,10 @@
 			<artifactId>jvm</artifactId>
 			<version>2.5</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.18.2</version>
+		</dependency>
 	</dependencies>
-
-
 </project>
