--- a/globalGameJam/pom.xml
+++ b/globalGameJam/pom.xml
@@ -46,4 +46,29 @@
 		    <version>3.1.0</version>
 		</dependency>
 	</dependencies>
+	
+	  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.6.0</version>
+        <configuration>
+          <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+					<mainClass>it.gamejam.truncate.bubblenap.ui.MainFrame</mainClass>
+				</transformer>
+			  </transformers>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
